--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "webpack": "^5.74.0"
   },
   "devDependencies": {
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "webpack-cli": "^4.10.0"
   }
 }
